<resources>
    <string name="app_name">ExampleApp</string>
    <string name="action_settings">Settings</string>
    <string name="app_description">This is an example app which will guide the user with integration of OmnyPay SDK</string>
    <string name="initialize_button">Initialize SDK</string>
    <string name="sdk_description">This is an example app which will guide the user with
        integration of different OmnyPay SDK's</string>
    <string name="initialize_omnypaypi_button">Initialize OmnyPay PI SDK</string>
    <string name="initialize_omnypaydl_button">Initialize OmnyPay DL SDK</string>
    <string name="initialize_omnypayauth_button">Initialize OmnyPAy Auth SDK</string>
    <string name="scan_button">SCAN</string>
    <string name="authenticate_button">AUTHENTICATE</string>
    <string name="proceed_button">PROCEED</string>
    <string name="add_button">ADD CARD</string>
    <string name="existing_cards">Existing Cards</string>
    <string name="card_number">Card Number</string>
    <string name="card_type">Card Type</string>
    <string name="no_card">No Existing Card</string>
    <string name="add_card">ADD CARD</string>
    <string-array name="card_type_array">
        <item>debit</item>
        <item>credit</item>
        <item>charge_card</item>
    </string-array>

    <string name="transaction_details">Transaction Details</string>
    <string name="no_items">No Items Added</string>
    <string name="item_name">Item Name</string>
    <string name="item_quantity">Qty.</string>
    <string name="item_price">Price</string>
    <string name="pay">PAY</string>

    <string name="subtotal">Subtotal</string>
    <string name="taxes">Taxes</string>
    <string name="paid">Total Paid</string>
    <string name="discount">Total Discount</string>
    <string name="receipt">Receipt</string>
    <string name="home">Home</string>

    <string name="select_card_text">Please select a card to proceed </string>


</resources>
