<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">
    <include
        android:id="@+id/header"
        layout="@layout/header_layout"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        ></include>


    <TextView
        android:layout_below="@+id/header"
        android:id="@+id/transaction_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:text="@string/transaction_details"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_below="@+id/transaction_details"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/item_name"
            android:layout_marginLeft="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/item_quantity" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/item_price" />

    </LinearLayout>

    <FrameLayout
        android:layout_below="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_above="@+id/pay_button"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/basket_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"></android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/empty_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_items"
            android:textStyle="bold"
            android:visibility="gone" />

    </FrameLayout>

    <Button
        android:id="@+id/pay_button"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/pay"
        android:enabled="false"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>


